# summer_practice_2024

./: CMakeLists.txt  animal.cpp  animal.h  chartwindow.cpp  chartwindow.h  chartwindow.ui  gamecontroller.cpp  gamecontroller.h  hunter.cpp  hunter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  plant.cpp  plant.h  res.qrc  sheep.cpp  sheep.h  wolf.cpp  wolf.h
